force-app/main/default/objects/ESS_Application__c.object
<CustomObject>
    <fields>
        <fullName>Name_Emp_EN_New_Title__c</fullName>
        <label>Name Emp EN New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Emp_EN_Old_FN__c</fullName>
        <label>Name Emp EN Old FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_EN_Old_LN__c</fullName>
        <label>Name Emp EN Old LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_EN_Old_Title__c</fullName>
        <label>Name Emp EN Old Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Emp_TH_FN__c</fullName>
        <label>Name Emp TH FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_TH_New_FN__c</fullName>
        <label>Name Emp TH New FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_TH_New_LN__c</fullName>
        <label>Name Emp TH New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_TH_New_Title__c</fullName>
        <label>Name Emp TH New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Emp_TH_Old_FN__c</fullName>
        <label>Name Emp TH Old FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_TH_Old_LN__c</fullName>
        <label>Name Emp TH Old LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_TH_Old_Title_FN_LN__c</fullName>
        <label>Name Emp TH Old Title FN LN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_TH_Old_Title__c</fullName>
        <label>Name Emp TH Old Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Father_Change_Doc_Date__c</fullName>
        <label>Name Father Change Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_Father_Change_Doc_Id__c</fullName>
        <label>Name Father Change Doc Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_Change_Doc_Location__c</fullName>
        <label>Name Father Change Doc Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_Change_Doc_No__c</fullName>
        <label>Name Father Change Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_Change_Doc_Province__c</fullName>
        <label>Name Father Change Doc Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_Citizen_Copy_Id__c</fullName>
        <label>Name Father Citizen Copy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_EN_New_FN__c</fullName>
        <label>Name Father EN New FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_EN_New_LN__c</fullName>
        <label>Name Father EN New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_EN_New_Title__c</fullName>
        <label>Name Father EN New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Father_EN_Old_FN__c</fullName>
        <label>Name Father EN Old FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_EN_Old_LN__c</fullName>
        <label>Name Father EN Old LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_EN_Old_Title__c</fullName>
        <label>Name Father EN Old Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Father_TH_New_FN__c</fullName>
        <label>Name Father TH New FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_TH_New_LN__c</fullName>
        <label>Name Father TH New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_TH_New_Title__c</fullName>
        <label>Name Father TH New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Father_TH_Old_FN__c</fullName>
        <label>Name Father TH Old FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_TH_Old_LN__c</fullName>
        <label>Name Father TH Old LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Father_TH_Old_Title__c</fullName>
        <label>Name Father TH Old Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Marriage_Change_Doc_Date__c</fullName>
        <label>Name Marriage Change Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_Change_Doc_Id__c</fullName>
        <label>Name Marriage Change Doc Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_Change_Doc_Location__c</fullName>
        <label>Name Marriage Change Doc Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_Change_Doc_No__c</fullName>
        <label>Name Marriage Change Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_Change_Doc_Province__c</fullName>
        <label>Name Marriage Change Doc Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_Citizen_Copy_Id__c</fullName>
        <label>Name Marriage Citizen Copy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_EN_New_FN__c</fullName>
        <label>Name Marriage EN New FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_EN_New_LN__c</fullName>
        <label>Name Marriage EN New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_EN_New_Title__c</fullName>
        <label>Name Marriage EN New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Marriage_EN_Old_FN__c</fullName>
        <label>Name Marriage EN Old FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_EN_Old_LN__c</fullName>
        <label>Name Marriage EN Old LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_EN_Old_Title__c</fullName>
        <label>Name Marriage EN Old Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Marriage_TH_New_FN__c</fullName>
        <label>Name Marriage TH New FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_TH_New_LN__c</fullName>
        <label>Name Marriage TH New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_TH_New_Title__c</fullName>
        <label>Name Marriage TH New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Marriage_TH_Old_FN__c</fullName>
        <label>Name Marriage TH Old FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_TH_Old_LN__c</fullName>
        <label>Name Marriage TH Old LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Marriage_TH_Old_Title__c</fullName>
        <label>Name Marriage TH Old Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Mother_Change_Doc_Date__c</fullName>
        <label>Name Mother Change Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_Mother_Change_Doc_Id__c</fullName>
        <label>Name Mother Change Doc Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_Change_Doc_Location__c</fullName>
        <label>Name Mother Change Doc Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_Change_Doc_No__c</fullName>
        <label>Name Mother Change Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_Change_Doc_Province__c</fullName>
        <label>Name Mother Change Doc Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_Citizen_Copy_Id__c</fullName>
        <label>Name Mother Citizen Copy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_EN_New_FN__c</fullName>
        <label>Name Mother EN New FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_EN_New_LN__c</fullName>
        <label>Name Mother EN New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_EN_New_Title__c</fullName>
        <label>Name Mother EN New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Mother_EN_Old_FN__c</fullName>
        <label>Name Mother EN Old FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_EN_Old_LN__c</fullName>
        <label>Name Mother EN Old LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_EN_Old_Title__c</fullName>
        <label>Name Mother EN Old Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Mother_TH_New_FN__c</fullName>
        <label>Name Mother TH New FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_TH_New_LN__c</fullName>
        <label>Name Mother TH New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_TH_New_Title__c</fullName>
        <label>Name Mother TH New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Mother_TH_Old_FN__c</fullName>
        <label>Name Mother TH Old FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_TH_Old_LN__c</fullName>
        <label>Name Mother TH Old LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Mother_TH_Old_Title__c</fullName>
        <label>Name Mother TH Old Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Is_Marriage_As_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old Is Marriage As Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Status_Marriage_Status__c</fullName>
        <label>Old Status Marriage Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_JSON__c</fullName>
        <label>SAP JSON</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sending_to_SAP_Date__c</fullName>
        <label>Sending to SAP Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Change_Detail_Id__c</fullName>
        <inlineHelpText>เอกสารเปลี่ยนแปลงคำนำหน้า/ชื่อสกุลหลังการหย่า</inlineHelpText>
        <label>Status Divorce Change Detail Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Change_LN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Divorce Change LN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Change_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Divorce Change Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Doc_Id__c</fullName>
        <label>Status Divorce Doc Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Doc_Issue_Date__c</fullName>
        <label>Status Divorce Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Doc_Issue_Location__c</fullName>
        <label>Status Divorce Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Doc_Issue_Province__c</fullName>
        <label>Status Divorce Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Doc_No__c</fullName>
        <label>Status Divorce Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_EN_FN__c</fullName>
        <label>Status Divorce EN FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_EN_LN__c</fullName>
        <label>Status Divorce EN LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_EN_New_LN__c</fullName>
        <label>Status Divorce EN New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_EN_New_Title__c</fullName>
        <label>Status Divorce EN New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Divorce_EN_Title__c</fullName>
        <label>Status Divorce EN Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Divorce_TH_FN__c</fullName>
        <label>Status Divorce TH FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_TH_LN__c</fullName>
        <label>Status Divorce TH LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_TH_New_LN__c</fullName>
        <label>Status Divorce TH New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_TH_New_Title__c</fullName>
        <label>Status Divorce TH New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Divorce_TH_Title__c</fullName>
        <label>Status Divorce TH Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Divorce_Use_Detail_Id__c</fullName>
        <inlineHelpText>เอกสารการใช้คำนำหน้านามและการใช้ชื่อสกุล</inlineHelpText>
        <label>Status Divorce Use Detail Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Change_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Marriage Change Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Change_Doc_Copy_Id__c</fullName>
        <inlineHelpText>สำเนาการเปลี่ยนคำนำหน้า / ชื่อสกุล ของคู่สมรส</inlineHelpText>
        <label>Status Marriage Change Doc Copy Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Change_Doc_Id__c</fullName>
        <inlineHelpText>เอกสารการใช้คำนำหน้าและการใช้ชื่อสกุลของพนักงาน</inlineHelpText>
        <label>Status Marriage Change Doc Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Citizen_Id_Copy__c</fullName>
        <label>Status Marriage Citizen Id Copy</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Citizen_Id__c</fullName>
        <label>Status Marriage Citizen Id</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_DOB__c</fullName>
        <label>Status Marriage DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Doc_Id__c</fullName>
        <label>Status Marriage Doc Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Doc_Issue_Date__c</fullName>
        <label>Status Marriage Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Doc_Issue_Location__c</fullName>
        <label>Status Marriage Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Doc_Issue_Province__c</fullName>
        <label>Status Marriage Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Doc_No__c</fullName>
        <label>Status Marriage Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_EN_FN__c</fullName>
        <label>Status Marriage EN FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_EN_LN__c</fullName>
        <label>Status Marriage EN LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_EN_New_FN__c</fullName>
        <label>Status Marriage EN New FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_EN_New_LN__c</fullName>
        <label>Status Marriage EN New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>